--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
+    "@netlify/plugin-nextjs": "^5.11.4",
     "next": "15.3.4",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
