--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^5.1.1",
+		"@modelcontextprotocol/sdk": "^1.17.4",
 		"@netlify/plugin-nextjs": "^5.11.4",
 		"next": "15.3.4",
 		"primeflex": "^4.0.0",
@@ -18,7 +19,7 @@
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.58.1",
-		"zod": "^3.25.67"
+		"zod": "^3.25.76"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
